unpackaged/main/default/objects/litify__lp_Activity_Sidecar__c/litify__lp_Activity_Sidecar__c.object-meta.xml
<CustomObject>
    <label>Activity Sidecar</label>
    <nameField>
        <label>Activity ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Activity Sidecars</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>