unpackaged/main/default/objects/litify__lp_Activity_Sidecar__c/fields/litify__lp_Abbreviated_Users_1__c.field-meta.xml
<CustomField>
    <fullName>litify__lp_Abbreviated_Users_1__c</fullName>
    <label>Abbreviated Users 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>