unpackaged/main/default/objects/litify__lp_Activity_Sidecar__c/fields/litify__lp_Activity_Code__c.field-meta.xml
<CustomField>
    <fullName>litify__lp_Activity_Code__c</fullName>
    <label>Activity Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>