unpackaged/main/default/objects/litify__lp_Activity_Sidecar__c/fields/litify__lp_Assignee_Roles__c.field-meta.xml
<CustomField>
    <fullName>litify__lp_Assignee_Roles__c</fullName>
    <label>Assignee Roles</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>litify__lp_Role_Type</valueSetName>
    </valueSet>
</CustomField>