unpackaged/main/default/objects/litify__lp_Activity_Sidecar__c/fields/litify__lp_Assignment_Type__c.field-meta.xml
<CustomField>
    <fullName>litify__lp_Assignment_Type__c</fullName>
    <label>Assignment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Team Role Group</fullName>
            </value>
            <value>
                <fullName>Salesforce Queue</fullName>
            </value>
            <value>
                <fullName>Specific User</fullName>
            </value>
            <value>
                <fullName>No Assignment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>