unpackaged/main/default/objects/litify__lp_Activity_Sidecar__c/fields/litify__lp_Cloned_From__c.field-meta.xml
<CustomField>
    <fullName>litify__lp_Cloned_From__c</fullName>
    <externalId>true</externalId>
    <label>Cloned From</label>
    <length>18</length>
    <type>Text</type>
</CustomField>