unpackaged/main/default/objects/litify__lp_Activity_Sidecar__c/fields/litify__lp_Color__c.field-meta.xml
<CustomField>
    <fullName>litify__lp_Color__c</fullName>
    <description>Color designations for tasks. Value API name should be a CSS-compatible color (named or hex, including the #).</description>
    <label>Color</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>red</fullName>
                <label>Red</label>
            </value>
            <value>
                <fullName>orange</fullName>
                <label>Orange</label>
            </value>
            <value>
                <fullName>#FFD700</fullName>
                <label>Yellow</label>
            </value>
            <value>
                <fullName>green</fullName>
                <label>Green</label>
            </value>
            <value>
                <fullName>blue</fullName>
                <label>Blue</label>
            </value>
            <value>
                <fullName>purple</fullName>
                <label>Purple</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>