unpackaged/main/default/objects/litify__lp_Activity_Sidecar__c/fields/litify__lp_Current_User_Abbreviated_ID__c.field-meta.xml
<CustomField>
    <fullName>litify__lp_Current_User_Abbreviated_ID__c</fullName>
    <description>The 7-digit abbreviated User ID. For &quot;00538000004XUEZ&quot; the value would be &quot;384XUEZ&quot;.</description>
    <formula>MID($User.Id, 4, 2) + MID($User.Id, 11, 5)</formula>
    <label>Current User Abbreviated ID</label>
    <type>Text</type>
</CustomField>