unpackaged/main/default/objects/litify__lp_Activity_Sidecar__c/fields/litify__lp_Date_Last_Modified_By__c.field-meta.xml
<CustomField>
    <fullName>litify__lp_Date_Last_Modified_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Date Last Modified By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Modified Activity Sidecars</relationshipLabel>
    <relationshipName>lp_Modified_Activity_Sidecars</relationshipName>
    <type>Lookup</type>
</CustomField>