unpackaged/main/default/objects/litify__lp_Activity_Sidecar__c/fields/litify__lp_Date_Last_Modified_By_Name__c.field-meta.xml
<CustomField>
    <fullName>litify__lp_Date_Last_Modified_By_Name__c</fullName>
    <description>The name of the user who last updated the date of this activity.</description>
    <formula>litify__lp_Date_Last_Modified_By__r.FirstName + &#39; &#39; +  litify__lp_Date_Last_Modified_By__r.LastName</formula>
    <label>Date Last Modified By Name</label>
    <type>Text</type>
</CustomField>