unpackaged/main/default/objects/litify__lp_Activity_Sidecar__c/fields/litify__lp_Date_Last_Modified_By_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>litify__lp_Date_Last_Modified_By_Timestamp__c</fullName>
    <label>Date Last Modified By Timestamp</label>
    <type>DateTime</type>
</CustomField>