unpackaged/main/default/objects/litify__lp_Activity_Sidecar__c/fields/litify__lp_Date_Last_Modified_Reason__c.field-meta.xml
<CustomField>
    <fullName>litify__lp_Date_Last_Modified_Reason__c</fullName>
    <label>Date Last Modified Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>