unpackaged/main/default/objects/litify__lp_Activity_Sidecar__c/fields/litify__lp_Date_Offset__c.field-meta.xml
<CustomField>
    <fullName>litify__lp_Date_Offset__c</fullName>
    <label>Date Offset</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>