unpackaged/main/default/objects/litify__lp_Activity_Sidecar__c/fields/litify__lp_Date_Offset_Units__c.field-meta.xml
<CustomField>
    <fullName>litify__lp_Date_Offset_Units__c</fullName>
    <label>Date Offset Units</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BUSINESS_DAYS</fullName>
                <label>Business Days</label>
            </value>
            <value>
                <fullName>DAYS</fullName>
                <label>Days</label>
            </value>
            <value>
                <fullName>MONTHS</fullName>
                <label>Months</label>
            </value>
            <value>
                <fullName>YEARS</fullName>
                <label>Years</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>