unpackaged/main/default/objects/litify__lp_Activity_Sidecar__c/fields/litify__lp_Date_Source__c.field-meta.xml
<CustomField>
    <fullName>litify__lp_Date_Source__c</fullName>
    <label>Date Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>List Start Date</fullName>
            </value>
            <value>
                <fullName>Task Due Date</fullName>
            </value>
            <value>
                <fullName>Event Start Date</fullName>
            </value>
            <value>
                <fullName>Activity Field</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>