unpackaged/main/default/objects/litify__lp_Activity_Sidecar__c/fields/litify__lp_Date_Source_Field__c.field-meta.xml
<CustomField>
    <fullName>litify__lp_Date_Source_Field__c</fullName>
    <label>Date Source Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>