unpackaged/main/default/objects/litify__lp_Activity_Sidecar__c/fields/litify__lp_Date_Source_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>litify__lp_Date_Source_Record_Id__c</fullName>
    <externalId>true</externalId>
    <label>Date Source Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>