unpackaged/main/default/objects/litify__lp_Activity_Sidecar__c/fields/litify__lp_Do_Not_Recalculate__c.field-meta.xml
<CustomField>
    <fullName>litify__lp_Do_Not_Recalculate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Recalculate</label>
    <type>Checkbox</type>
</CustomField>