unpackaged/main/default/objects/litify__lp_Activity_Sidecar__c/fields/litify__lp_Document_Link__c.field-meta.xml
<CustomField>
    <fullName>litify__lp_Document_Link__c</fullName>
    <label>Document Link</label>
    <type>Url</type>
</CustomField>