unpackaged/main/default/objects/litify__lp_Activity_Sidecar__c/fields/litify__lp_Error_Title__c.field-meta.xml
<CustomField>
    <fullName>litify__lp_Error_Title__c</fullName>
    <label>Error Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>