unpackaged/main/default/objects/litify__lp_Activity_Sidecar__c/fields/litify__lp_Is_Initial_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>litify__lp_Is_Initial_Due_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Initial Due Date</label>
    <type>Checkbox</type>
</CustomField>