unpackaged/main/default/objects/litify__lp_Activity_Sidecar__c/fields/litify__lp_List__c.field-meta.xml
<CustomField>
    <fullName>litify__lp_List__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>List</label>
    <referenceTo>litify__lp_List__c</referenceTo>
    <relationshipLabel>Activity Sidecars</relationshipLabel>
    <relationshipName>lp_Activity_Sidecar</relationshipName>
    <type>Lookup</type>
</CustomField>