unpackaged/main/default/objects/litify__lp_Activity_Sidecar__c/fields/litify__lp_Ownership_Type__c.field-meta.xml
<CustomField>
    <fullName>litify__lp_Ownership_Type__c</fullName>
    <label>Ownership Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PARENT_OBJECT_OWNER</fullName>
                <label>Parent Object Owner</label>
            </value>
            <value>
                <fullName>SPECIFIC_USER</fullName>
                <label>Specific User</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>