unpackaged/main/default/objects/litify__lp_Activity_Sidecar__c/fields/litify__lp_Recurrence_Type__c.field-meta.xml
<CustomField>
    <fullName>litify__lp_Recurrence_Type__c</fullName>
    <label>Recurrence Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AFTER_DUE_DATE</fullName>
                <label>After due date</label>
            </value>
            <value>
                <fullName>AFTER_DATE_COMPLETED</fullName>
                <label>After Date Completed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>