unpackaged/main/default/objects/litify__lp_Activity_Sidecar__c/fields/litify__lp_Reminder_Time__c.field-meta.xml
<CustomField>
    <fullName>litify__lp_Reminder_Time__c</fullName>
    <label>Reminder Time</label>
    <type>Time</type>
</CustomField>