unpackaged/main/default/objects/litify__lp_Activity_Sidecar__c/fields/litify__lp_Repeat_Event__c.field-meta.xml
<CustomField>
    <fullName>litify__lp_Repeat_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Repeat Event</label>
    <type>Checkbox</type>
</CustomField>