unpackaged/main/default/objects/litify__lp_Activity_Sidecar__c/fields/litify__lp_Template_SObject_Type__c.field-meta.xml
<CustomField>
    <fullName>litify__lp_Template_SObject_Type__c</fullName>
    <label>Template SObject Type</label>
    <length>60</length>
    <type>Text</type>
</CustomField>