unpackaged/main/default/objects/litify__lp_Activity_Sidecar__c/fields/litify__lp_User_or_Queue_ID__c.field-meta.xml
<CustomField>
    <fullName>litify__lp_User_or_Queue_ID__c</fullName>
    <externalId>true</externalId>
    <label>User or Queue ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>